<resources>
    <string name="app_name">DAM_JheremyAyquipa</string>
    <string name="ingenieria_sistemas">Ingeniera de Sistemas</string>
    <string name="ingeniera_electronica">Ingeniera Electrónica</string>
    <string name="ingenieria_ambiental">Ingeniera Ambiental</string>
    <string name="administracion_empresas">Administracion de empresas</string>
    <string name="examen_admision">Examen de admision 2021</string>
    <string name="button_enviar">Enviar</string>
    <string name="radio_button">Radio</string>
    <string name="internet_button">Internet</string>
    <string name="amigo_button">Amigo</string>
    <string name="publicidad_button">Publicidad</string>
</resources>